started implementing token refresh workflow